--- a/solution/index.html
+++ b/solution/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent" id="gtco-main-nav">
-    <div class="container"><a class="navbar-brand">Solution</a>
+    <div class="container"><a class="navbar-brand">Code For Good</a>
         <button class="navbar-toggler" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse"><span
                 class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span></button>
         <div id="my-nav" class="collapse navbar-collapse">
@@ -36,9 +36,10 @@
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a href="#" class="btn btn-outline-dark my-2 my-sm-0 mr-3 text-uppercase">login</a> <a href="#"
-                                                                                                       class="btn btn-info my-2 my-sm-0 text-uppercase">sign
-                up</a>
+                <a href="#" class="btn btn-outline-dark my-2 my-sm-0 mr-3 text-uppercase">apply</a> 
+                <!-- <a href="#"
+                                                                                                       class="btn btn-info my-2 my-sm-0 text-uppercase">contact
+                </a> -->
             </form>
         </div>
     </div>
@@ -47,13 +48,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h1> We promise to bring
-                    the best <span>solution</span> for
-                    your business. </h1>
+                <h1> Where computer science
+                    meets <span>social good</span></h1>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus turpis nisl. </p>
-                <a href="#">Contact Us <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                <a href="#">Apply Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-md-6">
-                <div class="card"><img class="card-img-top img-fluid" src="images/banner-img.png" alt=""></div>
+                <div class="card"><img class="card-img-top img-fluid" src="https://cdn.pixabay.com/photo/2017/05/09/13/33/laptop-2298286__480.png" alt=""></div>
             </div>
         </div>
     </div>
@@ -346,78 +346,8 @@
         </div>
     </div>
 </div>
-<div class="container-fluid gtco-news" id="news">
-    <div class="container">
-        <h2>Latest News & Articles</h2>
-        <div class="owl-carousel owl-carousel2 owl-theme">
-            <div>
-                <div class="card text-center"><img class="card-img-top" src="images/news1.jpg" alt="">
-                    <div class="card-body text-left pr-0 pl-0">
-                        <h5>Aenean ultrices lorem quis blandit
-                            tempor urabitur accumsan. </h5>
-                        <p class="card-text">Donec non sem mi. In hac habitasse platea dictumst. Nullam a feugiat augue,
-                            et porta metus. Nulla mollis lobortis leet. Maecenas tincidunt, arcu sed ornare purus risus
-                            . . . </p>
-                        <a href="#">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-                </div>
-            </div>
-            <div>
-                <div class="card text-center"><img class="card-img-top" src="images/news2.jpg" alt="">
-                    <div class="card-body text-left pr-0 pl-0">
-                        <h5> Nam vel nisi eget odio pulvinar
-                            iaculis. Fusce aliquet. </h5>
-                        <p class="card-text">Donec non sem mi. In hac habitasse platea dictumst. Nullam a feugiat augue,
-                            et porta metus. Nulla mollis lobortis leet. Maecenas tincidunt, arcu sed ornare purus risus
-                            . . . </p>
-                        <a href="#">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-                </div>
-            </div>
-            <div>
-                <div class="card text-center"><img class="card-img-top" src="images/news3.jpg" alt="">
-                    <div class="card-body text-left pr-0 pl-0">
-                        <h5>Morbi faucibus odio sollicitudin
-                            risus scelerisque dignissim. </h5>
-                        <p class="card-text">Donec non sem mi. In hac habitasse platea dictumst. Nullam a feugiat augue,
-                            et porta metus. Nulla mollis lobortis leet. Maecenas tincidunt, arcu sed ornare purus risus
-                            . . . </p>
-                        <a href="#">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-                </div>
-            </div>
-            <div>
-                <div class="card text-center"><img class="card-img-top" src="images/news1.jpg" alt="">
-                    <div class="card-body text-left pr-0 pl-0">
-                        <h5>Aenean ultrices lorem quis blandit
-                            tempor urabitur accumsan. </h5>
-                        <p class="card-text">Donec non sem mi. In hac habitasse platea dictumst. Nullam a feugiat augue,
-                            et porta metus. Nulla mollis lobortis leet. Maecenas tincidunt, arcu sed ornare purus risus
-                            . . . </p>
-                        <a href="#">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-                </div>
-            </div>
-            <div>
-                <div class="card text-center"><img class="card-img-top" src="images/news2.jpg" alt="">
-                    <div class="card-body text-left pr-0 pl-0">
-                        <h5> Nam vel nisi eget odio pulvinar
-                            iaculis. Fusce aliquet. </h5>
-                        <p class="card-text">Donec non sem mi. In hac habitasse platea dictumst. Nullam a feugiat augue,
-                            et porta metus. Nulla mollis lobortis leet. Maecenas tincidunt, arcu sed ornare purus risus
-                            . . . </p>
-                        <a href="#">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-                </div>
-            </div>
-            <div>
-                <div class="card text-center"><img class="card-img-top" src="images/news3.jpg" alt="">
-                    <div class="card-body text-left pr-0 pl-0">
-                        <h5>Morbi faucibus odio sollicitudin
-                            risus scelerisque dignissim. </h5>
-                        <p class="card-text">Donec non sem mi. In hac habitasse platea dictumst. Nullam a feugiat augue,
-                            et porta metus. Nulla mollis lobortis leet. Maecenas tincidunt, arcu sed ornare purus risus
-                            . . . </p>
-                        <a href="#">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+    
 </div>
 <footer class="container-fluid" id="gtco-footer">
     <div class="container">
