--- a/solution/index.html
+++ b/solution/index.html
@@ -29,10 +29,10 @@
                 class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span></button>
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#services">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#about">Team</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class="nav-link underline" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link underline" href="#services">About</a></li>
+                <li class="nav-item"><a class="nav-link underline" href="#about">Team</a></li>
+                <li class="nav-item"><a class="nav-link underline" href="#contact">Contact</a></li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <a href="#" class="btn btn-outline-dark my-2 my-sm-0 mr-3 text-uppercase">apply</a> 
@@ -266,20 +266,21 @@
 			</div>
 
 			<div class="footer-center">
-
-				<div>
-                    <p>Contact Us</p>
-					<!-- <i class="fa fa-phone"></i>
-					<p>+1.555.555.5555</p>
-                    -->
-				</div>
-
-				<div>
-					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:codeforgoodberkeley@gmail.com">codeforgoodberkeley@gmail.com</a></p>
-				</div>
-
+                
                 <div>
+                    <p>Contact Us</p>
+                    <!-- <i class="fa fa-phone"></i>
+                    <p>+1.555.555.5555</p>
+                    -->
+                </div>
+                <div class="contact">
+                    <div>
+                        <i class="fa fa-envelope"></i>
+                        <p><a class="underline" href="mailto:codeforgoodberkeley@gmail.com">codeforgoodberkeley@gmail.com</a></p>
+                    </div>
+                </div>
+
+                <div class="ocf">
 					<!-- <i class="fa fa-map-marker"></i>
 					<p><span>444 S. Cedros Ave</span> Solana Beach, California</p> -->
                     <a href="https://www.ocf.berkeley.edu">
