--- a/solution/timeline.html
+++ b/solution/timeline.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" href="timeline.css">
+<link rel="stylesheet" href="css/timeline.css">
 
 <div class="container">
     <div class="wrapper">
