footer move ocf center

--- a/solution/index.html
+++ b/solution/index.html
@@ -276,14 +276,14 @@
                     </div>
                 </div>
 
-                <!-- <div class="ocf">
-					<-- <i class="fa fa-map-marker"></i>
-					<p><span>444 S. Cedros Ave</span> Solana Beach, California</p> --
+                <div class="ocf">
+					<!-- <i class="fa fa-map-marker"></i>
+					<p><span>444 S. Cedros Ave</span> Solana Beach, California</p> -->
                     <a href="https://www.ocf.berkeley.edu">
                         <img src="https://www.ocf.berkeley.edu/hosting-logos/ocf-hosted-penguin.svg"
                             alt="Hosted by the OCF" style="border: 0;" />
                     </a>
-				</div> -->
+				</div>
 
 			</div>
 
@@ -297,10 +297,6 @@
 
 					<!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
 					<a href="https://www.instagram.com/codeforgoodcal/?hl=en"><i class="fa fa-instagram"></i></a>
-                    <a href="https://www.ocf.berkeley.edu" class="ocf2">
-                        <img src="https://www.ocf.berkeley.edu/hosting-logos/ocf-hosted-penguin.svg"
-                            alt="Hosted by the OCF" style="border: 0;" />
-                    </a>
 					<!-- <a href="#"><i class="fa fa-linkedin"></i></a> -->
 					<!-- <a href="#"><i class="fa fa-github"></i></a> -->
 
