--- a/solution/timeline.html
+++ b/solution/timeline.html
@@ -3,51 +3,51 @@
 
 <div class="container">
     <div class="wrapper">
-      <h1> A day in my 'sleepy' life 😅</h1>
+      <h1> Recruitment Timeline</h1>
       <ul class="sessions">
         <li>
-          <div class="time">09:00 AM</div>
-          <p>How is it already 9:00? Just how??? 🤯🤯</p>
+          <div class="time">1/17-1/21</div>
+          <h2> Tabling </h2>
+          <p>We will begin our tabling during the first week of school! 
+            Stop by anytime to learn more about Code For Good.</p>
+            <p>  ADD TIMES, Tuesday to Friday, 1/17-1/21 <br>
+                 Location: Lower/Upper? Sproul </p>
         </li>
         <li>
-          <div class="time">09:05 AM</div>
-          <p>Few more minutes of sleep won't do anyone any harm 🤷..</p>
+          <div class="time">1/17-1/21</div>
+          <h2> Coffee Chats</h2>
+          <p>Sign up for a coffee chat (ATTACH LINK) (on zoom or in person)
+            to chat with one of our members about Code for Good!</p>
+            <p>  Tuesday to Friday, 1/17-1/21 <br>
+                 Location: Varies by time slot </p>
         </li>
         <li>
-          <div class="time">09:30 AM</div>
-          <p>Get up 🙄</p>
+          <div class="time">1/19</div>
+          <h2> Code For Good Infosession #1</h2>
+          <p>Come meet our officers and ask questions about the club at
+            our infosession! We will be going over potential projects for the 
+            semester.
+          </p>
+          <p>  8-9 PM, Thursday, 1/19 <br>
+               Location: Wheeler 108 </p>
         </li>
         <li>
-          <div class="time">1:00 PM</div>
-          <p>How can I feel sleepy again?😵</p>
+          <div class="time">1/25</div>
+          <h2> Code For Good Infosession #2</h2>
+          <p>Come meet our officers and ask questions about the club at
+            our infosession! We will be going over potential projects for the 
+            semester.
+          </p>
+          <p>  8-9 PM, Wednesday, 1/25 <br>
+               Location: Wheeler 108 </p>
         </li>
         <li>
-          <div class="time">01:30 PM</div>
-          <p>Lunch time after which sleep just doesn't want to let go of me. 🤝</p>
-        </li>
-        <li>
-          <div class="time">3:30 PM</div>
-          <p>Drink the magical chai, it will ward off sleep they said. 🤷‍</p>
-        </li>
-        <li>
-          <div class="time">4:30 PM </div>
-          <p>The only time I don't feel sleepy cause it's work out time. I mean walking time. 😹</p>
-        </li>
-        <li>
-          <div class="time">07:00 PM </div>
-          <p>Food my tummy needs, sleep my body needs.👿</p>
-        </li>
-        <li>
-          <div class="time">07:30 PM </div>
-          <p>My tummy's happy time 🍝</p>
-        </li>
-        <li>
-          <div class="time">10:00 PM </div>
-          <p>uh oh!!! fuel low, get some snacks but wait should I just take a quick nap?🤓 </p>
-        </li>
-        <li>
-          <div class="time">2:30 PM </div>
-          <p>All hail! The time to sleep has finally arrived.😴😴😴😴😴 </p>
+          <div class="time">1/29</div>
+          <h2> Applications Due!</h2>
+          <p>Fill out an application so we can learn more about you and how you can Code For Good!
+          </p>
+          <p>  11:59 PM, Sunday 1/25 <br>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link">Apply Here!</a>
         </li>
       </ul>
     </div>
