--- a/solution/index.html
+++ b/solution/index.html
@@ -35,7 +35,7 @@
                 <li class="nav-item"><a class="nav-link underline" href="#contact">Contact</a></li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a href="#" class="btn btn-outline-dark my-2 my-sm-0 mr-3 text-uppercase">apply</a> 
+                <a href="file:///Users/kristychu/Desktop/codeforgood.github.io/solution/timeline.html" class="btn btn-outline-dark my-2 my-sm-0 mr-3 text-uppercase">apply</a> 
                 <!-- <a href="#"
                                                                                                        class="btn btn-info my-2 my-sm-0 text-uppercase">contact
                 </a> -->
@@ -153,15 +153,15 @@
                         <div class="card text-center">
                             <div class="oval"><img class="card-img-top" src="https://www.freeiconspng.com/uploads/face-head-woman-female-icon-2.png" alt=""></div>
                             <div class="card-body">
-                                <h3 class="card-title">Kristy</h3>
-                                <p class="card-text">Sophomore | CS</p>
+                                <h3 class="card-title">Kristy Chu</h3>
+                                <p class="card-text">Sophomore | CS & CogSci</p>
                             </div>
                         </div>
                         <div class="card text-center">
                             <div class="oval"><img class="card-img-top" src="https://www.freeiconspng.com/thumbs/face-icon-png/face-head-man-person-profile-user-icon--30.png" alt=""></div>
                             <div class="card-body">
-                                <h3 class="card-title">Jose</h3>
-                                <p class="card-text">Sophomore | CS</p>   
+                                <h3 class="card-title">Jose Ochoa</h3>
+                                <p class="card-text">Sophomore | CS</p>  
                             </div>
                         </div>
                     </div>
