--- a/solution/timeline.html
+++ b/solution/timeline.html
@@ -2,6 +2,10 @@
 <link rel="stylesheet" href="css/timeline.css">
 
 <div class="container">
+  <li>
+    <h3>apply </h3>
+    <p1> We are now recruiting for Spring 2023! Fill out an application 
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link">here</a> .</p1>
     <div class="wrapper">
       <h1> Recruitment Timeline</h1>
       <ul class="sessions">
@@ -51,4 +55,5 @@
         </li>
       </ul>
     </div>
+    </li>
   </div> 
