--- a/solution/index.html
+++ b/solution/index.html
@@ -50,7 +50,7 @@
                 <h1> Where computer science
                     meets <span>social good</span></h1>
                 <p> Working with nonprofits to help bring positive change in our communities </p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link">Apply Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link" target="_blank">Apply Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-md-6">
                 <div class="card"><img class="card-img-top img-fluid" src="https://cdn.pixabay.com/photo/2017/05/09/13/33/laptop-2298286__480.png" alt=""></div>
             </div>
@@ -305,6 +305,7 @@
 			</div>
 
 		</footer>
+        
 <!-- <footer class="container-fluid" id="gtco-footer">
     <div class="container">
         <div class="row">
