fixed timeline header

--- a/solution/index.html
+++ b/solution/index.html
@@ -29,13 +29,13 @@
                 class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span></button>
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link underline" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link underline" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link underline" href="#services">About</a></li>
                 <li class="nav-item"><a class="nav-link underline" href="#about">Team</a></li>
-                <li class="nav-item"><a class="nav-link underline" href="#contact">Contact</a></li>
+                <li class="nav-item"><a class="nav-link underline" href="contact.html">Contact</a></li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a href="file:///Users/kristychu/Desktop/codeforgood.github.io/solution/timeline.html" class="btn btn-outline-dark my-2 my-sm-0 mr-3 text-uppercase">apply</a> 
+                <a href="timeline.html" class="btn btn-outline-dark my-2 my-sm-0 mr-3 text-uppercase">apply</a> 
                 <!-- <a href="#"
                                                                                                        class="btn btn-info my-2 my-sm-0 text-uppercase">contact
                 </a> -->
