home page edits

--- a/solution/index.html
+++ b/solution/index.html
@@ -50,7 +50,7 @@
                 <h1> Where computer science
                     meets <span>social good</span></h1>
                 <p> Working with nonprofits to help bring positive change in our communities </p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link" target="_blank">Apply Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                <a href="timeline.html" target="_blank">Apply Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-md-6">
                 <div class="card"><img class="card-img-top img-fluid" src="https://cdn.pixabay.com/photo/2017/05/09/13/33/laptop-2298286__480.png" alt=""></div>
             </div>
@@ -93,9 +93,7 @@
                     To Design & Create </h2>
                 <p> Our teams work synchronously to build what we've laid out in paper -- piece by piece, our vision comes together. </p>
                 <p>
-                    <small>Nunc sodales lobortis arcu, sit amet venenatis erat placerat a. Donec lacinia magna nulla,
-                        cursus impediet augue egestas id. Suspendisse dolor lectus, pellentesque quis tincidunt ac,
-                        dictum id neque.
+                    <small>Code for Good is a once-in-a-lifetime opportunity to connect with like-minded individuals enthusiastic and willing to put in the work to develop positive change. Through three phases of ideation, planning, and building, we design and build scalable products, apps, and software systems ready to serve and help society.
                     </small>
                 </p>
                 <a href="https://www.instagram.com/codeforgoodcal/">Instagram <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
@@ -108,9 +106,7 @@
             <div class="col-lg-4">
                 <h2> Meet The Executives<br/>
                     Of Code For Good </h2>
-                <p> Nunc sodales lobortis arcu, sit amet venenatis erat placerat a. Donec lacinia magna nulla, cursus
-                    impediet augue egestas id. Suspendisse dolor lectus, pellentesque quis tincidunt ac, dictum id
-                    neque. </p>
+                <p> The executive team brings together different skills and experiences to help drive the organization's mission of supporting non-profit organizations with technology solutions. Together we hope to make a positive impact in the communities we serve. </p>
                 <a href="#">Coffee Chat <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-lg-8">
                 <svg id="bg-services"
@@ -170,7 +166,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid gtco-numbers-block">
+<!-- <div class="container-fluid gtco-numbers-block">
     <div class="container">
         <svg width="100%" viewBox="0 0 1600 400">
             <defs>
@@ -181,9 +177,9 @@
                 </linearGradient>
 
             </defs>
-            <!-- <clipPath id="clip-path3">
+            <clipPath id="clip-path3">
 
-                                      </clipPath> -->
+                                      </clipPath> 
 
             <path fill-rule="evenodd"  fill="url(#PSgrad_03)"
                   d="M98.891,386.002 L1527.942,380.805 C1581.806,380.610 1599.093,335.367 1570.005,284.353 L1480.254,126.948 C1458.704,89.153 1408.314,59.820 1366.025,57.550 L298.504,0.261 C238.784,-2.944 166.619,25.419 138.312,70.265 L16.944,262.546 C-24.214,327.750 12.103,386.317 98.891,386.002 Z"></path>
@@ -193,7 +189,6 @@
                         d="M98.891,386.002 L1527.942,380.805 C1581.806,380.610 1599.093,335.367 1570.005,284.353 L1480.254,126.948 C1458.704,89.153 1408.314,59.820 1366.025,57.550 L298.504,0.261 C238.784,-2.944 166.619,25.419 138.312,70.265 L16.944,262.546 C-24.214,327.750 12.103,386.317 98.891,386.002 Z"></path>
             </clipPath>
 
-            <!-- xlink:href for modern browsers, src for IE8- -->
             <image  clip-path="url(#ctm)" xlink:href="images/word-map.png" height="800px" width="100%" class="svg__image">
 
             </image>
@@ -234,7 +229,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
 
