--- a/solution/index.html
+++ b/solution/index.html
@@ -106,7 +106,10 @@
             <div class="col-lg-4">
                 <h2> Meet The Executives<br/>
                     Of Code For Good </h2>
-                <p> The executive team brings together different skills and experiences to help drive the organization's mission of supporting non-profit organizations with technology solutions. Together we hope to make a positive impact in the communities we serve. </p>
+                <p>Doing our best to lead the charge with technology for good</p>
+                <p>
+                    <small> The executive team brings together different skills and experiences to help drive the organization's mission of supporting non-profit organizations with technology solutions. Together we hope to make a positive impact in the communities we serve. </small>
+                </p>
                 <a href="#">Coffee Chat <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-lg-8">
                 <svg id="bg-services"
