--- a/solution/index.html
+++ b/solution/index.html
@@ -96,7 +96,7 @@
                     <small>Code for Good is a once-in-a-lifetime opportunity to connect with like-minded individuals enthusiastic and willing to put in the work to develop positive change. Through three phases of ideation, planning, and building, we design and build scalable products, apps, and software systems ready to serve and help society.
                     </small>
                 </p>
-                <a href="https://www.instagram.com/codeforgoodcal/">Instagram <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                <a href="timeline.html">Recruitment Timeline <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
         </div>
     </div>
 </div>
@@ -106,10 +106,7 @@
             <div class="col-lg-4">
                 <h2> Meet The Executives<br/>
                     Of Code For Good </h2>
-                <p>Doing our best to lead the charge with technology for good</p>
-                <p>
-                    <small> The executive team brings together different skills and experiences to help drive the organization's mission of supporting non-profit organizations with technology solutions. Together we hope to make a positive impact in the communities we serve. </small>
-                </p>
+                <p>The executive team brings together different skills and experiences to help drive the organization's mission of supporting non-profit organizations with technology solutions. Together we hope to make a positive impact in the communities we serve.</p>
                 <a href="#">Coffee Chat <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-lg-8">
                 <svg id="bg-services"
