--- a/solution/timeline.html
+++ b/solution/timeline.html
@@ -55,14 +55,14 @@
             <div class="time">1/17-1/21</div>
             <h12> Tabling </h12>
             <p>We will begin our tabling during the first week of school! 
-              Stop by anytime to learn more about Code For Good.</p>
-              <p>  ADD TIMES, Tuesday to Friday, 1/17-1/21 <br>
-                    Location: Lower/Upper? Sproul </p>
+              Stop by anytime to learn more about Code For Good. Look for our flyers around campus!</p>
+              <p>  Tuesday to Friday, 1/17-1/21 <br>
+                    Location: Sproul </p>
           </li>
           <li class="lines">
             <div class="time">1/17-1/21</div>
             <h12> Coffee Chats</h12>
-            <p>Sign up for a coffee chat (ATTACH LINK) (on zoom or in person)
+            <p>Sign up for a <a href = "https://calendly.com/dhruvchowdhary/15min">coffee chat</a> (on zoom or in person)
               to chat with one of our members about Code for Good!</p>
               <p>  Tuesday to Friday, 1/17-1/21 <br>
                     Location: Varies by time slot </p>
@@ -74,7 +74,7 @@
               our infosession! We will be going over potential projects for the 
               semester.
             </p>
-            <p>  8-9 PM, Thursday, 1/19 <br>
+            <p>  8-9 PM, Wednesday, 1/25 <br>
                   Location: Wheeler 108 </p>
           </li>
           <li class="lines">
@@ -84,7 +84,7 @@
               our infosession! We will be going over potential projects for the 
               semester.
             </p>
-            <p>  8-9 PM, Wednesday, 1/25 <br>
+            <p>  8-9 PM, Thursday, 1/26 <br>
                   Location: Wheeler 108 </p>
           </li>
           <li class="lines">
@@ -92,7 +92,7 @@
             <h12> Applications Due!</h12>
             <p>Fill out an application so we can learn more about you and how you can Code For Good!
             </p>
-            <p>  11:59 PM, Sunday 1/25 <br>
+            <p>  11:59 PM, Sunday 1/29 <br>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link" target="_blank">Apply Here!</a>
           </li>
         </ul>
