--- a/timeline.html
+++ b/timeline.html
@@ -112,7 +112,7 @@
             
             <a href="#">Team</a>
             
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
           </p>
 
           <p class="footer-company-name">Code For Good © 2023</p>
