--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 			<div class="footer-left">
 
 				<!-- <h3>Company<span>logo</span></h3> -->
-                <img src="images/CFGLogoGrey.png" alt="Code For Good" style="border: 0;" />
+                <a href="index.html"><img src="images/CFGLogoGrey.png" alt="Code For Good" style="border: 0;" /></a>
 				<p class="footer-links">
 					<a href="index.html" class="link-1">Home</a>
 				
