--- a/timeline.html
+++ b/timeline.html
@@ -18,14 +18,14 @@
   </style>
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent" id="gtco-main-nav">
-  <div class="container"><a class="navbar-brand">Code For Good</a>
+  <div class="container"><a href="index.html" class="navbar-brand">Code For Good</a>
       <button class="navbar-toggler" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse">
         <span class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span></button>
       <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a class="nav-link underline" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link underline" href="#services">About</a></li>
-          <li class="nav-item"><a class="nav-link underline" href="#about">Team</a></li>
+          <li class="nav-item"><a class="nav-link underline" href="index.html#service">About</a></li>
+          <li class="nav-item"><a class="nav-link underline" href="index.html#about">Team</a></li>
           <li class="nav-item"><a class="nav-link underline" href="contact.html">Contact</a></li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
