--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <link rel="stylesheet" href="css/contact.css">
 <head>
   <!-- Required meta tags -->
@@ -14,9 +15,8 @@
   <!-- custom CSS -->
   <link rel="stylesheet" href="css/style.css">
   <title>Code For Good</title>
-  <style>
-  </style>
 </head>
+<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent" id="gtco-main-nav">
   <div class="container"><a href="index.html" class="navbar-brand">Code For Good</a>
       <button class="navbar-toggler" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse">
@@ -129,3 +129,12 @@
   </div>
 
 </footer>
+
+<script src="js/jquery-3.3.1.slim.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<!-- owl carousel js-->
+<script src="owl-carousel/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>
+</body>
+</html>
