--- a/timeline.html
+++ b/timeline.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <link rel="stylesheet" href="css/timeline.css">
 <head>
   <!-- Required meta tags -->
@@ -14,9 +15,8 @@
   <!-- custom CSS -->
   <link rel="stylesheet" href="css/style.css">
   <title>Code For Good</title>
-  <style>
-  </style>
 </head>
+<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent" id="gtco-main-nav">
   <div class="container"><a href="index.html" class="navbar-brand">Code For Good</a>
       <button class="navbar-toggler" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse">
@@ -68,7 +68,7 @@
                     Location: Varies by time slot </p>
           </li>
           <li class="lines">
-            <div class="time">1/19</div>
+            <div class="time">1/25</div>
             <h12> Code For Good Infosession #1</h12>
             <p>Come meet our officers and ask questions about the club at
               our infosession! We will be going over potential projects for the 
@@ -78,7 +78,7 @@
                   Location: Wheeler 108 </p>
           </li>
           <li class="lines">
-            <div class="time">1/25</div>
+            <div class="time">1/26</div>
             <h12> Code For Good Infosession #2</h12>
             <p>Come meet our officers and ask questions about the club at
               our infosession! We will be going over potential projects for the 
@@ -163,3 +163,11 @@
 
       </footer>
 </body>
+<script src="js/jquery-3.3.1.slim.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<!-- owl carousel js-->
+<script src="owl-carousel/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>
+</body>
+</html>
