--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <h2> Meet The Executives<br/>
                     Of Code For Good </h2>
                 <p>The executive team brings together different skills and experiences to help drive the organization's mission of supporting non-profit organizations with technology solutions. Together we hope to make a positive impact in the communities we serve.</p>
-                <a href="#">Coffee Chat <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                <a href="https://calendly.com/dhruvchowdhary/15min">Coffee Chat <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-lg-8">
                 <svg id="bg-services"
                      width="100%"
