--- a/timeline.html
+++ b/timeline.html
@@ -46,8 +46,7 @@
       <div>
         <h13>apply</h13>
       </div> 
-      <p1> We are now recruiting for Spring 2023! Fill out an application 
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link" target="_blank">here</a>.</p1>
+      <p1>We are now recruiting for Spring 2023! Fill out an application&nbsp;<a href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link" target="_blank">here</a>.</p1>
         <div class="wrapper">
         <h11> Recruitment Timeline</h11>
         <ul class="sessions">
