--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 <div class="containers">
 <h1 class="contactTitle"> contact us </h1>
 
-<h3 class="textHolder">Do you have questions or concerns for us? Fill out our form or email us at codeforgoodberkeley@gmail.com, and we'll get back to you as soon as possible!</h3>
+<h3 class="textHolder">Do you have questions or concerns for us? Email us at codeforgoodberkeley@gmail.com, and we'll get back to you as soon as possible!</h3>
 
 <div id="contact-text-section">
     <div class="cards">
@@ -60,7 +60,7 @@
 <div class="cards">
   <div class="cardcontain">
     <h2><b>General Inquiries</b></h2>
-    <p>Email the executive board at codeforgoodberkeley@gmail.com or reach out to us on any of our socials. We’re happy to chat!</p>
+    <p>Email the executive board at <a href="mailto:codeforgoodberkeley@gmail.com">codeforgoodberkeley@gmail.com</a> or reach out to us on any of our socials. We’re happy to chat!</p>
   </div>
 </div>
 </div>
