--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 			<div class="footer-left">
 
 				<!-- <h3>Company<span>logo</span></h3> -->
-                <a href="index.html"><img src="images/CFGLogoGrey.png" alt="Code For Good" style="border: 0;" /></a>
+                <a href="index.html"><img src="images/CFGBannerBlack.jpg" alt="Code For Good" style="border: 0;" /></a>
 				<p class="footer-links">
 					<a href="index.html" class="link-1">Home</a>
 				
