--- a/timeline.html
+++ b/timeline.html
@@ -94,6 +94,20 @@
             <p>  11:59 PM, Sunday 1/29 <br>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link" target="_blank">Apply Here!</a>
           </li>
+          <li class="lines">
+            <div class="time">1/31</div>
+            <h12> Interviews </h12>
+            <p>We will have quick behavioral interviews with the exec team to learn more about you and to see what projects you may be interested in.
+            </p>
+            <p> Tuesday 1/31 <br>
+          </li>
+          <li class="lines">
+            <div class="time">2/07</div>
+            <h12> First General Meeting! </h12>
+            <p>Meeting everyone and splitting into committees!
+            </p>
+            <p> 7-9pm, Tuesday 2/07 <br>
+          </li>
         </ul>
       </div>
     </li>
@@ -103,8 +117,8 @@
 
         <div class="footer-left">
 
-          <a href="index.html"><img src="images/CFGLogoGrey.png" alt="Code For Good" style="border: 0;" /></a>
-          <p class="footer-links">
+          <a href="index.html"><img src="images/CFGBannerBlack.jpg" alt="Code For Good" style="border: 0;" /></a>
+          <p class="footer-links grey">
             <a href="index.html" class="link-1">Home</a>
           
             <a href="index.html#service">About</a>
@@ -114,13 +128,13 @@
             <a href="contact.html">Contact</a>
           </p>
 
-          <p class="footer-company-name">Code For Good © 2023</p>
+          <p class="footer-company-name grey">Code For Good © 2023</p>
         </div>
 
         <div class="footer-center">
                   
                   <div>
-                      <p>Contact Us</p>
+                      <p class="grey">Contact Us</p>
                       <!-- <i class="fa fa-phone"></i>
                       <p>+1.555.555.5555</p>
                       -->
