changed timeline wording

--- a/timeline.html
+++ b/timeline.html
@@ -97,14 +97,14 @@
           <li class="lines">
             <div class="time">1/31</div>
             <h12> Interviews </h12>
-            <p>We will have quick behavioral interviews with the exec team to learn more about you and to see what projects you may be interested in.
+            <p>We will have quick interviews to learn more about you and to see what projects you may be interested in!
             </p>
             <p> Tuesday 1/31 <br>
           </li>
           <li class="lines">
             <div class="time">2/07</div>
             <h12> First General Meeting! </h12>
-            <p>Meeting everyone and splitting into committees!
+            <p>Meeting the Spring 2023 CFG fam and splitting into committees!
             </p>
             <p> 7-9pm, Tuesday 2/07 <br>
           </li>
