--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
     <!-- <h3>Company<span>logo</span></h3> -->
     <a href="index.html"><img src="images/CFGBannerBlack.jpg" alt="Code For Good" style="border: 0;" /></a>
-    <p class="footer-links grey">
+    <p class="footer-links">
       <a href="index.html" class="link-1">Home</a>
     
       <a href="index.html#service">About</a>
@@ -82,13 +82,13 @@
       <a href="contact.html">Contact</a>
     </p>
 
-    <p class="footer-company-name grey">Code For Good © 2023</p>
+    <p class="footer-company-name">Code For Good © 2023</p>
   </div>
 
   <div class="footer-center">
             
             <div>
-                <p class="grey">Contact Us</p>
+                <p>Contact Us</p>
                 <!-- <i class="fa fa-phone"></i>
                 <p>+1.555.555.5555</p>
                 -->
