fixed font of hyperlinks

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <div class="cards">
         <div class="cardcontain">
           <h2><b>For Students</b></h2>
-          <p>Interested in joining Code For Good? Click <a href="timeline.html"> here</a> to apply, and email us if you have any questions!</p>
+          <p>Interested in joining Code For Good? Click <a class="sans-serif" href="timeline.html"> here</a> to apply, and email us if you have any questions!</p>
         </div>
       </div>
     <div class="cards">
@@ -60,7 +60,7 @@
 <div class="cards">
   <div class="cardcontain">
     <h2><b>General Inquiries</b></h2>
-    <p>Email the executive board at <a href="mailto:codeforgoodberkeley@gmail.com">codeforgoodberkeley@gmail.com</a> or reach out to us on any of our socials. We’re happy to chat!</p>
+    <p>Email the executive board at <a class="sans-serif" href="mailto:codeforgoodberkeley@gmail.com">codeforgoodberkeley@gmail.com</a> or reach out to us on any of our socials. We’re happy to chat!</p>
   </div>
 </div>
 </div>
