--- a/timeline.html
+++ b/timeline.html
@@ -46,7 +46,7 @@
       <div>
         <h13>apply</h13>
       </div> 
-      <p1>We are now recruiting for Spring 2023! Fill out an application&nbsp;<a href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link">here</a>.</p1>
+      <p1>We are now recruiting for Spring 2023! Fill out an application&nbsp;<a class="sans-serif" href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link">here</a>.</p1>
         <div class="wrapper">
         <h11> Recruitment Timeline</h11>
         <ul class="sessions">
@@ -61,7 +61,7 @@
           <li class="lines">
             <div class="time">1/17-1/21</div>
             <h12> Coffee Chats</h12>
-            <p>Sign up for a <a href = "https://calendly.com/dhruvchowdhary/15min">coffee chat</a> (on zoom or in person)
+            <p>Sign up for a <a class="sans-serif" href = "https://calendly.com/dhruvchowdhary/15min">coffee chat</a> (on zoom or in person)
               to chat with one of our members about Code for Good!</p>
               <p>  Tuesday to Friday, 1/17-1/21 <br>
                     Location: Varies by time slot </p>
@@ -92,7 +92,7 @@
             <p>Fill out an application so we can learn more about you and how you can Code For Good!
             </p>
             <p>  11:59 PM, Sunday 1/29 <br>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link" target="_blank">Apply Here!</a>
+              <a class="sans-serif" href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link" target="_blank">Apply Here!</a>
           </li>
           <li class="lines">
             <div class="time">1/31</div>
@@ -104,7 +104,7 @@
           <li class="lines">
             <div class="time">2/07</div>
             <h12> First General Meeting! </h12>
-            <p>Meeting the Spring 2023 CFG fam and splitting into committees!
+            <p>Meet the Spring 2023 CFG fam and split into committees!
             </p>
             <p> 7-9pm, Tuesday 2/07 <br>
           </li>
