fixed underline animation for footer

--- a/timeline.html
+++ b/timeline.html
@@ -142,7 +142,7 @@
                   <div class="contact">
                       <div>
                           <a href="mailto:codeforgoodberkeley@gmail.com"><i class="fa fa-envelope"></i></a>
-                          <p><a class="underline" href="mailto:codeforgoodberkeley@gmail.com">codeforgoodberkeley@gmail.com</a></p>
+                          <p><a class="underline white" href="mailto:codeforgoodberkeley@gmail.com">codeforgoodberkeley@gmail.com</a></p>
                       </div>
                   </div>
 
