--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <!-- Required meta tags -->
+    <meta name="google-site-verification" content="H7OCJIwvX1xvJCrpkEw-kTdTq6diYihZybrUBslAaBY" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
