--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- custom CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/CFGLogoBlack.jpg">
     <title>Code For Good</title>
 </head>
 <body>
