changed interview timeline

--- a/timeline.html
+++ b/timeline.html
@@ -99,7 +99,7 @@
             <h12> Interviews </h12>
             <p>We will have quick interviews to learn more about you and to see what projects you may be interested in!
             </p>
-            <p> Tuesday 1/31 <br>
+            <p> Tuesday to Friday, 1/31-2/3 <br>
           </li>
           <li class="lines">
             <div class="time">2/07</div>
