made apply now on timeline bold

--- a/timeline.html
+++ b/timeline.html
@@ -88,7 +88,7 @@
           </li>
           <li class="lines">
             <div class="time">1/29</div>
-            <h12> Applications Due!</h12>
+            <h12 class="bold"> Applications Due!</h12>
             <p>Fill out an application so we can learn more about you and how you can Code For Good!
             </p>
             <p>  11:59 PM, Sunday 1/29 <br>
