add application due to timeline

--- a/timeline.html
+++ b/timeline.html
@@ -73,7 +73,7 @@
               our infosession! We will be going over potential projects for the 
               semester.
             </p>
-            <p>  8-9 PM, Wednesday, 1/25 <br>
+            <p>  8-9 PM, Wednesday 1/25 <br>
                   Location: Wheeler 108 </p>
           </li>
           <li class="lines">
@@ -83,7 +83,7 @@
               our infosession! We will be going over potential projects for the 
               semester.
             </p>
-            <p>  8-9 PM, Thursday, 1/26 <br>
+            <p>  8-9 PM, Thursday 1/26 <br>
                   Location: Wheeler 108 </p>
           </li>
           <li class="lines">
@@ -91,7 +91,7 @@
             <h12 class="bold"> Applications Due!</h12>
             <p>Fill out an application so we can learn more about you and how you can Code For Good!
             </p>
-            <p>  11:59 PM, Sunday 1/29 <br>
+            <p>  Due 11:59 PM, Sunday 1/29 <br>
               <a class="sans-serif" href="https://docs.google.com/forms/d/e/1FAIpQLSe6NEhUpEbsh9AIr01ncpYqmYp95yP_IQsROPLGuADKGjP28w/viewform?usp=sf_link" target="_blank">Apply Here!</a>
           </li>
           <li class="lines">
